fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   font-family: arial, sans-serif;
 }
+
 h1 {
   color: #878787;
   font-size: 24px;
@@ -35,19 +36,9 @@ input[type="text"] {
   padding: 10px;
   width: 300px;
 }
-button {
-  margin-left: 5px;
-  position: relative;
-  top: 1px;
-  border-radius: 2px;
-  color: #fff;
-  height: 44px;
-}
 .App {
   max-width: 600px;
-  margin: 30px auto;
 }
-
 .Weather {
   padding: 20px;
   border: 1px solid #dadde1;
